--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "Emily Harber (https://github.com/thecodepixi)"
   ],
   "license": "MIT",
-  "main": "content.js",
+  "main": "src/content.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
