rewrite extension to run continuously on page load

--- a/manifest.json
+++ b/manifest.json
@@ -13,5 +13,8 @@
             ],
             "run_at": "document_end"
         }
+    ],
+    "permissions": [
+        "http://twitter.com/", "https://twitter.com/", "tabs", "activeTab", "storage"
     ]
 }
