--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "license": "MIT",
   "main": "src/content.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "npx babel src --out-dir dist"
   },
   "repository": {
     "type": "git",
@@ -64,6 +65,7 @@
     }
   },
   "devDependencies": {
+    "@babel/cli": "^7.14.8",
     "@babel/core": "^7.14.8",
     "@babel/preset-env": "^7.14.8",
     "babel-eslint": "^10.1.0",
